:cat2:Del studentId and stduentPw now can login and logout can get sport data fixed course list info to text-align left

--- a/src/styles/less/main.less
+++ b/src/styles/less/main.less
@@ -291,6 +291,7 @@ footer {
 }
 .courseInfo {
   li {
+    text-align: left;
   }
 }
 
